[package]
name = "lolien-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0" }
log = {version = "0" }
env_logger = { version = "0" }
anyhow = { version = "1" }

actix-web = { version = "4" }
actix-multipart = { version = "0" }
futures-util = { version = "0" }
sanitize-filename = { version = "0" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sea-orm = { version = "0", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
async-trait = "0"
rofl-parser = "0"

